Fixed word wrap issue in tables

--- a/web-app/css/layout.css
+++ b/web-app/css/layout.css
@@ -256,6 +256,7 @@ ul#nav ul li a {
 #content-wrap {
 	background: #fff;
 	padding: 42px 0 36px 0;
+    word-wrap: break-word;
 }
 #content-wrap #main { padding-right: 40px; }
 
